# STRAND

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: Dataset1_merfish_u2os_data_dict.pkl  _smoke50_new.parquet  _sprawl_smoke.parquet  simulated_data_dict.pkl  simulated_pattern_test.parquet
docs/: colocalization_module.md  compartment_module.md  developer_guide.md  input_format.md  installation.md  output_files.md  pattern_module.md  troubleshooting.md
models/: multiclass_xgb_7class_no_foci_final_from_cv.joblib  multiclass_xgb_8class_prop075_final_from_cv.joblib
tests/: check_geometry.py  com_pkl.py  pattern_from_features.py  test_all_from_pkl.py  test_bento_from_pkl.py  test_prefilter.py  test_smoke.py  test_sprawl_from_pkl.py
tools/api/: __init__.py  coloc_plotting.py  coloc_summary.py  colocalization.py  compartments.py  compute_all.py  patterns.py
tools/bento_feature/bento/bento_tools/: __init__.py  point_features.py  shape_features.py
tools/cli/: coloc_plot.py  coloc_summary.py  colocalization.py  compartments.py  pattern.py  run.py
tools/engines/: bento_adapter.py  coloc_region_annotation.py  coloc_visualization.py  compartment_adapter.py  instant_adapter.py  run_coloc_plot_only.py  run_region_annotation_only.py  sprawl_adapter.py
tools/instant_core/: InSTAnT.py  __init__.py
tools/io/: data_loader.py
tools/models/: __init__.py  pattern_classifier.py
tools/sprawl_score/sprawl/: cells.py  metrics.py  utils.py
tools/utils/: timing.py
