[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subcellular-toolbox"
version = "0.1.0"
description = "A command-line toolbox for subcellular spatial transcriptomics feature extraction, RNA localization pattern classification, compartment detection, and RNA colocalization analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }



dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=1.5,<2.4",
    "scipy>=1.10,<1.14",
    "scikit-learn>=1.2,<1.7",
    "xgboost>=1.7,<3.0",
    "joblib>=1.2",
    "matplotlib>=3.6,<3.10",
    "seaborn>=0.12,<0.14",
    "tqdm>=4.60",
    "pyarrow>=10",
    "shapely>=2.0,<2.2",
    "geopandas>=0.13,<1.1",
    "networkx>=2.8,<3.3",
    "kneed>=0.8",
    "minisom>=2.3",
    "statsmodels>=0.13,<0.15",
    "Pillow>=9,<11",
    "anndata>=0.9,<0.12",
    "astropy>=5,<7",
]


[project.optional-dependencies]
dev = [
"pytest",
"ipykernel",
"jupyter",
]

docs = [
"mkdocs",
"mkdocs-material",
]

[project.scripts]
subcellfeat = "tools.cli.run:main"
subcellfeat-pattern = "tools.cli.pattern:main"
subcellfeat-compartment = "tools.cli.compartments:main"
subcellfeat-coloc = "tools.cli.colocalization:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
tools = [
"**/*.txt",
"**/*.json",
"**/*.yaml",
"**/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
